# Checkers_Game_Proyect

./: CMakeLists.txt  PruebaWindow.cpp  README.md  main.cpp
Checkers/src/: CheckerGame.cpp  Checkerboard.cpp  Checkerpiece.cpp  Checkers.cpp
keypad/: keypad.ino
